--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,9 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-    -   id: check-merge-conflict
-    -   id: check-ast
     -   id: debug-statements
-    -   id: check-toml
-    -   id: check-json
-    -   id: check-xml
+    -   id: detect-private-key
+    -   id: name-tests-test
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
