--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,12 @@ repos:
     -   id: check-added-large-files
     -   id: debug-statements
     -   id: detect-private-key
-    -   id: name-tests-test
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
     -   id: black
+-   repo: https://github.com/PyCQA/flake8
+    rev: 4.0.1
+    hooks:
+    -   id: flake8
+        args: ['--max-line-length=131', '--ignore=E203,W503']
