--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy==1.25.1
-scikit-learn==1.3.0
-quantile-forest==1.2.0
-tqdm==4.65.0
+numpy>=1.24.4
+scikit-learn>=1.3.2
+quantile-forest>=1.2.4
+tqdm>=4.66.1
+pandas>=2.0.3
