add adaptive intervals

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,4 +16,4 @@ repos:
     rev: 7.0.0
     hooks:
     -   id: flake8
-        args: ['--max-line-length=131', '--ignore=E203,W503']
+        args: ['--max-line-length=131', '--ignore=E203,W503,E501']
