--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,8 @@ repos:
     hooks:
     -   id: flake8
         args: ['--max-line-length=131', '--ignore=E203,W503,E501']
+-   repo: https://github.com/PyCQA/autoflake
+    rev: v2.2.0  # Use the latest stable version
+    hooks:
+    -   id: autoflake
+        args: ["--remove-all-unused-imports", "--remove-unused-variables", "--in-place"]
