--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,34 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-dependencies = []  # Will be read from requirements.txt
+dependencies = [
+    "numpy>=1.20.0",
+    "scikit-learn>=1.0.0",
+    "scipy>=1.7.0",
+    "pandas>=1.3.0",
+    "lightgbm>=3.2.0",
+    "tqdm>=4.60.0",
+    "pydantic>=2.0.0",
+    "joblib>=1.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/rick12000/confopt"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-xdist>=3.0.0",
+    "pre-commit>=3.4.0",
+    "autoflake>=2.0.0",
+]
+docs = [
+    "sphinx>=5.0.0",
+    "sphinx-rtd-theme>=1.3.0",
+    "myst-parser>=2.0.0",
+    "sphinx-copybutton>=0.5.0",
+    "sphinxcontrib-mermaid>=0.8.0",
+]
 
 [tool.setuptools]
 packages = {find = {exclude = ["tests*", "examples*", "misc*", "build*", "dist*", "*.egg-info*"]}}
