--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy
-scikit-learn
-tqdm
-pandas
-lightgbm
-scipy
+numpy>=1.20.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+pandas>=1.3.0
+lightgbm>=3.2.0
+tqdm>=4.60.0
+pydantic>=2.0.0
+joblib>=1.0.0
