--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "tqdm>=4.60.0",
     "pydantic>=2.0.0",
     "joblib>=1.0.0",
+    "statsmodels>=0.13.0"
 ]
 
 [project.urls]
