--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,9 @@ packages = {find = {exclude = ["tests*", "examples*", "misc*", "build*", "dist*"
 include-package-data = true
 
 [tool.setuptools.package-data]
-confopt = ["utils/cy_entropy.pyx"]
+confopt = ["selection/sampling/cy_entropy.pyx"]
 
 [tool.cythonize]
 modules = [
-    {include = ["confopt/utils/cy_entropy.pyx"]}
+    {include = ["confopt/selection/sampling/cy_entropy.pyx"]}
 ]
