--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,16 +1,43 @@
-# Exclude build artifacts from source and binary distributions
+# Include essential files
+include LICENSE
+include README.md
+include requirements.txt
+include pytest.ini
+
+# Include Cython files (source and generated C for source distributions)
+include confopt/selection/sampling/cy_entropy.pyx
+include confopt/selection/sampling/cy_entropy.c
+
+# Exclude build artifacts and temporary files
 prune build
 prune dist
 prune *.egg-info
+prune __pycache__
+global-exclude *.pyc
+global-exclude *.pyo
+# Exclude compiled extensions from source distributions (sdist)
+# They should only be in wheels (bdist_wheel)
+global-exclude *.pyd
+global-exclude *.so
+global-exclude .DS_Store
 
-# Exclude test and example directories
+# Exclude development and testing directories
 prune tests
 prune examples
 prune misc
+prune benchmarks
+prune cache
+prune docs
+prune assets
 
-# Include Cython source file
-include confopt/selection/sampling/cy_entropy.pyx
+# Exclude result and profile directories
+prune benchmark_results
+prune code_optimization_results
+prune comparison_results
+prune method_profiles
+prune optimization_results
 
-# Include license and readme
-include LICENSE
-include README.md
+# Exclude development files
+exclude requirements-dev.txt
+exclude .pre-commit-config.yaml
+exclude .readthedocs.yml
